...
        mainButton: BlocBuilder<LoginBloc, LoginState>(
          builder: (context, state) {
            return AuthenticationSubmitButton(
              canSubmit: state.canSubmit,
              onPressed: () => loginBloc.add(Submitted()),
              status: state.status,
              title: 'LOGIN',
              icon: Icons.favorite,
            );
          },
        ),
        secondaryButton: BlocBuilder<LoginBloc, LoginState>(
          builder: (context, state) {
            return AuthenticationSecondButton(
              onPressed: () => Navigator.of(context).push(SignUpFlow.route()),
              title: 'SIGNUP',
              icon: Icons.add_reaction_rounded,
            );
          },
        ),
      ),
    );
...
